# Skeletal-Animation-for-Parkinson-s-Disease-Simulation

./: README.md
Blender/: ReadMe.txt.txt
Blender/Videos Exported/Jumping/: 0001-0060.mkv
Blender/Videos Exported/OLD/Jumping/: 0001-0060.mkv
Blender/Videos Exported/OLD/Walking/: 0001-0060.mkv
Blender/Videos Exported/Running/: 0001-0060.mkv
Blender/Videos Exported/Sitting/: 0001-0060.mkv
Blender/Videos Exported/Walking/: 0001-0060.mkv
Blender/Videos Exported/disorder 1/: 0001-0100.mkv
Blender/Videos Exported/disorder 2/: 0001-0100.mkv
OpenGL/Fig 1 Custom Parser/: CMakeLists.txt  Fig1.cpp  getBMP.cpp
OpenGL/Fig2 Custom Parser/: CMakeLists.txt  Fig2.cpp
OpenGL/Fig3 Custom Parser/: CMakeLists.txt  Fig3.cpp  getBMP.h
